<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cloudaward.lyl.CompleteBaseInfoActivity" >

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_avatar" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@+id/iv_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:checkedButton="@+id/rb_female"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <View
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_set_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rg_gender"
        android:layout_marginTop="24dp"
        android:text="@string/set_nickname" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_set_nickname"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/pls_input_your_nickname"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_nickname"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:background="@color/primary_color"
        android:gravity="center"
        android:text="@string/complete"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

</RelativeLayout>