<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cloudaward.lyl.LoginRegisterActivity" >

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_avatar" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_register_button_shape"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/login_button" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/login_button"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/register_button" />

    <TextView
        android:id="@+id/tv_thirdparty_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/thirdparty_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray_2" />

    <ImageView
        android:id="@+id/iv_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_thirdparty_login"
        android:layout_below="@+id/tv_thirdparty_login"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/weibo"
        android:src="@drawable/ic_weibo" />

    <ImageView
        android:id="@+id/iv_weixin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv_thirdparty_login"
        android:layout_below="@+id/tv_thirdparty_login"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/weixin"
        android:src="@drawable/ic_weixin" />

</RelativeLayout>