<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cloudaward.lyl.SetAccoutPasswordActivity" >

    <TextView
        android:id="@+id/tv_already_send_captcha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:singleLine="true"
        android:text="@string/already_send_captcha"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/layout_input_captcha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_already_send_captcha"
        android:layout_marginTop="24dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_input_captcha"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/listPreferredItemHeightSmall"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:hint="@string/input_captcha"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_resend_captcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/et_input_captcha"
            android:layout_toRightOf="@+id/et_input_captcha"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:singleLine="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_set_accout_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_input_captcha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:singleLine="true"
        android:text="@string/title_activity_set_accout_password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_input_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_set_accout_password"
        android:gravity="start|center_vertical"
        android:hint="@string/input_password"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/et_input_password_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input_password"
        android:gravity="start|center_vertical"
        android:hint="@string/input_password_again"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input_password_again"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:background="@color/primary_color"
        android:gravity="center"
        android:text="@string/next_step"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

</RelativeLayout>