<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/iv_shadow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/shadow"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

    <!-- Begin the left sliding menu -->

    <RelativeLayout
        android:id="@+id/sv_left_menu"
        android:layout_width="220dp"
        android:layout_height="fill_parent"
        android:padding="@dimen/reside_menu_padding" >

        <!-- Begin the top avatar and task list and menu list -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- Top Avatar & nickname & grade -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_avatar" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/nickname_margin_left"
                    android:layout_marginStart="@dimen/nickname_margin_left"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/iv_avatar"
                    android:layout_toRightOf="@+id/iv_avatar"
                    android:gravity="center"
                    android:text="@string/nickname"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_nickname"
                    android:layout_alignStart="@+id/tv_nickname"
                    android:layout_below="@+id/tv_nickname"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/grade"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <!-- Task total list -->

            <ListView
                android:id="@+id/taskTotalList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:padding="@dimen/avatar_padding"
                android:scrollbars="none" >
            </ListView>

            <!-- Separator line -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <!-- Navigation menu list -->

            <LinearLayout
                android:id="@+id/layout_left_menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
        <!-- // End the top avatar and task list and menu list -->


        <!-- Begin the bottom settings and messages panel -->

        <LinearLayout
            android:id="@+id/layout_bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeightSmall"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="2dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tv_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/ic_settings"
                    android:drawableStart="@drawable/ic_settings"
                    android:gravity="center"
                    android:text="@string/settings"
					android:textSize="@dimen/settings_messages_text_size"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tv_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/ic_messages"
                    android:drawableStart="@drawable/ic_messages"
                    android:gravity="center"
                    android:text="@string/messages"
					android:textSize="@dimen/settings_messages_text_size"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
        <!-- Begin the bottom settings and messages panel -->
    </RelativeLayout>
    <!-- End the left sliding menu -->


    <!-- Begin the right sliding menu -->

    <LinearLayout
        android:id="@+id/sv_right_menu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical" >

        <LinearLayout
            android:id="@+id/layout_right_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>
    <!-- End the right sliding menu -->

</merge>